# meroghar

./: .gitignore  DOC_INDEX.md  IMPLEMENTATION_CHECKLIST.md  Makefile  Pipfile  QUICKSTART.md  README.md  SETUP_GUIDE.md  SETUP_SUMMARY.md  TEMPLATE_RELEASE_CHECKLIST.md  docker-compose.yml  mkdocs.yml  setup_apps.py  spec-kit.md
backend/: .env.example  BILL_VALIDATION.md  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_rls_policies.py  003_add_payments_tables.py  004_add_bills_tables.py  005_add_bills_rls_policies.py  006_add_payment_gateway_fields.py  007_add_expenses_table.py  008_add_expenses_rls_policies.py  009_add_sync_logs_table.py  010_add_updated_at_to_property_assignments.py  011_add_messages_table.py  012_add_messages_rls_policies.py  012cc4845c3b_add_payment_tables.py  013_add_documents_table.py  014_add_documents_rls_policies.py  015_add_rent_increment_columns.py  016_add_notifications_table.py  017_add_fcm_token.py  018_add_notifications_rls_policies.py  019_add_language_preference.py  020_add_report_templates.py  021_add_performance_indexes.py  022_add_missing_rls_policies.py  4f2c8d7a9b1e_add_bookings_and_agreements.py  5d9e1c2b7a4f_add_billing_tables.py  c3e4f5a6b7c8_add_listings_slice_tables.py
backend/docs/: END_TO_END_TEST_REPORT.md  api.md  caching-guide.md  deployment.md  docker-deployment-guide.md  error-logging-audit.md  input-validation-audit.md  pgadmin-setup.md  quickstart-fixes-summary.md  quickstart-validation-report.md  security-audit.md  sentry-monitoring.md  session-summary-2025-01.md
backend/scripts/: README.md  backup.sh  restore.sh  seed_demo_data.py
backend/src/: main.py
backend/src/api/: dependencies.py
backend/src/core/: cache.py  config.py  constants.py  database.py  middleware.py  security.py
backend/src/db/: session.py
backend/src/models/: __init__.py  bill.py  document.py  expense.py  maintenance.py  message.py  notification.py  payment.py  property.py  report.py  sync.py  tenant.py  user.py
backend/src/schemas/: __init__.py  auth.py  bill.py  document.py  expense.py  message.py  (+8 more)
(+715 files in other folders)
